# Vulgine

./: CMAKELists.txt  CMakeLists.txt  build.sh  main.cpp  run.sh
Include/: engine_headers.hpp
Include/Engine/: engine.hpp  engine_info.hpp
Include/Structs/: engine_structs.hpp
Include/Window/: window.hpp
Src/: main.cpp
Src/Engine/: engine.cpp
Src/Engine/Headers/: engine.hpp
Src/Window/: window.cpp
